[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["surajmt8848 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
Pillow = "^8.2.0"
coverage = "^5.5"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
